--- a/Build_IT_Web/ClientApp/app/modules/script-interpreter/components/script-calculator/parameter-inputs/input/parameter-input.component.less
+++ b/Build_IT_Web/ClientApp/app/modules/script-interpreter/components/script-calculator/parameter-inputs/input/parameter-input.component.less
@@ -2,6 +2,6 @@
     color: rgba(255,255,255,.7);
     font-size: 87.5%;
     position:relative;
-    top:-20px;
+    top:-1.4em;
     max-width:205px;
 }
