--- a/Build_IT_Web/ClientApp/app/modules/script-interpreter/components/script-calculator/parameter-inputs/autocomplete/parameter-autocomplete.component.html
+++ b/Build_IT_Web/ClientApp/app/modules/script-interpreter/components/script-calculator/parameter-inputs/autocomplete/parameter-autocomplete.component.html
@@ -18,7 +18,7 @@
                   autoActiveFirstOption >
     <mat-option *ngFor="let valueOption of filteredValueOptions | async"
                 [value]="valueOption.value">
-        {{valueOption.value }} {{valueOption.description}}
+        {{valueOption.name }}
     </mat-option>
 </mat-autocomplete>
 
