--- a/Build_IT_Web/ClientApp/app/modules/script-interpreter/components/script-calculator/parameter-inputs/radio/parameter-radio.component.html
+++ b/Build_IT_Web/ClientApp/app/modules/script-interpreter/components/script-calculator/parameter-inputs/radio/parameter-radio.component.html
@@ -9,6 +9,7 @@
                           (change)="changeValue($event)">
             {{valueOption.value }}
         </mat-radio-button>
+        {{parameter.unit | html}}
     </mat-radio-group>
     <p class="parameter-description">{{parameter.description}}</p>
 </div>
