--- a/Build_IT_Web/ClientApp/app/modules/script-interpreter/components/script-calculator/script-calculator.component.html
+++ b/Build_IT_Web/ClientApp/app/modules/script-interpreter/components/script-calculator/script-calculator.component.html
@@ -25,7 +25,7 @@
             </mat-list>
         </div>
 
-        <div>
+        <div class="mt-2">
             <div *ngFor="let parameter of notGroupedParameters"
                  class="list-inline-item ml-5 d-inline-flex">
                 <parameter-form [parameter]="parameter"
