--- a/Build_IT_Web/ClientApp/app/modules/script-interpreter/components/script-form/tag-form/tag-form.component.html
+++ b/Build_IT_Web/ClientApp/app/modules/script-interpreter/components/script-form/tag-form/tag-form.component.html
@@ -1,41 +1,28 @@
-﻿
-<div class="row">
-    <div class="col-md-12 col-sm-12">
-        <div class="row">
-            <div class="form-group col-xl-1 col-lg-2 col-md-2 col-sm-3 col-3">
-                <button type="button" class="btn btn-info" (click)="addTag()">Add tag</button>
-            </div>
-            <div class="form-group col-xl-11 col-lg-10 col-md-10 col-sm-9 col-9">
-                <button type="button" class="btn btn-danger" (click)="removeTag()">Remove Last</button>
-            </div>
-        </div>
-        <label *ngIf="script.tags.length > 0">Tags</label>
-        <div class="row" id="tags">
-            <div *ngFor="let tag of script.tags; index as i" class="form-group col-md-2">
-                <select class="form-control"
-                        [(ngModel)]="tag.id"
-                        name="tag{{i}}"
-                        (change)="selectedTagChanged(tag)"
-                        placeholder="Tag">
-                    <option *ngFor="let t of tags" [ngValue]="t.id" [attr.selected]="t.id == tag.id ? true : null">{{t.name}}</option>
-                </select>
-            </div>
-        </div>
-    </div>
-</div>
-
-<div class="row">
-    <div class="col-lg-12">
-        <label>Add new tag:</label>
-        <input type="text"
-               class="ml-2"
-               [(ngModel)]="newTag.name"
-               name="tagName"
-               autocomplete="off" />
-        <button type="button"
-                class="bg-primary border-primary text-light"
-                (click)="addNewTag()">
-            Add tag
-        </button>
-    </div>
-</div>
+﻿<mat-form-field class="w-75 m-2">
+    <mat-chip-list #chipList>
+        <mat-chip *ngFor="let tagForm of scriptTags.controls"
+                  [selectable]="selectable"
+                  [removable]="removable"
+                  (removed)="remove(tagForm)">
+            {{tagForm.value.name}}
+            <span matChipRemove
+                  *ngIf="removable"
+                  class="fa fa-remove"></span>
+        </mat-chip>
+        <input placeholder="Add new tags"
+               #tagInput
+               [formControl]="tagCtrl"
+               [matAutocomplete]="auto"
+               [matChipInputFor]="chipList"
+               [matChipInputSeparatorKeyCodes]="separatorKeysCodes"
+               [matChipInputAddOnBlur]="addOnBlur"
+               (matChipInputTokenEnd)="add($event)">
+    </mat-chip-list>
+    <mat-autocomplete #auto="matAutocomplete" 
+                      (optionSelected)="selected($event)">
+        <mat-option *ngFor="let tag of filteredTags | async"
+                    [value]="tag.name">
+            {{tag.name}}
+        </mat-option>
+    </mat-autocomplete>
+</mat-form-field>
