Functions and parameters exported using MEF

--- a/Build_IT_Web/ClientApp/app/components/nav-menu/nav-menu.component.html
+++ b/Build_IT_Web/ClientApp/app/components/nav-menu/nav-menu.component.html
@@ -44,9 +44,13 @@
                        [routerLink]="['/deadloads']">
                         <span class="fa fa-building"></span> Dead Loads
                     </a>
+                    <a class="dropdown-item"
+                       [routerLink]="['/snowloads']">
+                        <span class="fa fa-snowman"></span> Snow Loads
+                    </a>
                     <!--<a class="dropdown-item" href="#">Another action</a>
-                    <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="#">Something else here</a>-->
+    <div class="dropdown-divider"></div>
+    <a class="dropdown-item" href="#">Something else here</a>-->
                 </div>
             </li>
             <!--<li class="nav-item">
