--- a/Build_IT_Web/ClientApp/app/modules/script-interpreter/components/script-calculator/parameter-inputs/autocomplete/parameter-autocomplete.component.html
+++ b/Build_IT_Web/ClientApp/app/modules/script-interpreter/components/script-calculator/parameter-inputs/autocomplete/parameter-autocomplete.component.html
@@ -2,6 +2,7 @@
     <input type="text"
            aria-label="Number"
            matInput
+           required
            [formControl]="valueOptionsForm"
            name="parameterInput"
            [matAutocomplete]="auto"
