--- a/Build_IT_Web/ClientApp/app/modules/script-interpreter/components/script-calculator/parameter-inputs/radio/parameter-radio.component.html
+++ b/Build_IT_Web/ClientApp/app/modules/script-interpreter/components/script-calculator/parameter-inputs/radio/parameter-radio.component.html
@@ -5,6 +5,7 @@
     <mat-radio-group [(ngModel)]="parameter.value">
         <mat-radio-button *ngFor="let valueOption of parameter.valueOptions; index as i"
                           [value]="valueOption.value"
+                          required
                           class="mr-3"
                           (change)="changeValue($event)">
             {{valueOption.value }}
