--- a/Build_IT_Web/ClientApp/app/modules/script-interpreter/components/script-form/tag-form/tag-form.component.html
+++ b/Build_IT_Web/ClientApp/app/modules/script-interpreter/components/script-form/tag-form/tag-form.component.html
@@ -11,6 +11,7 @@
         </mat-chip>
         <input placeholder="Add new tags"
                #tagInput
+               [attr.disabled]="scriptTags.controls.length > 5 || null"
                [formControl]="tagCtrl"
                [matAutocomplete]="auto"
                [matChipInputFor]="chipList"
