--- a/Build_IT_Web/ClientApp/app/modules/script-interpreter/components/script-form/script-form.component.html
+++ b/Build_IT_Web/ClientApp/app/modules/script-interpreter/components/script-form/script-form.component.html
@@ -9,19 +9,27 @@
 
 <form (ngSubmit)="onSubmit()"
       [formGroup]="scriptForm">
-
     <mat-tab-group dynamicHeight>
+
         <mat-tab label="Script data">
             <div class="example-small-box mat-elevation-z4">
                 <script-data-form [scriptForm]="scriptForm"
                                   [includeNote]="includeNote"></script-data-form>
             </div>
         </mat-tab>
+
         <mat-tab label="Tags">
             <div class="example-large-box mat-elevation-z4">
                 <tag-form [scriptForm]="scriptForm"></tag-form>
             </div>
         </mat-tab>
+
+        <mat-tab label="Parameters">
+            <div class="example-large-box mat-elevation-z4">
+                <app-parameters-form *ngIf="editMode"></app-parameters-form>
+            </div>
+        </mat-tab>
+
     </mat-tab-group>
 
     <button *ngIf="!editMode"
@@ -38,128 +46,3 @@
     </button>
 </form>
 
-<app-parameters-form *ngIf="editMode"></app-parameters-form>
-
-
-<!-- <div class="container">
-     <form (ngSubmit)="onSubmit()"
-           [formGroup]="scriptForm">
-         <h2 class="mt-4 text-center">Script</h2>
-
-         <mat-form-field class="m-2 form-medium">
-             <input matInput
-                    required
-                    placeholder="Name"
-                    formControlName="name"
-                    [errorStateMatcher]="matcher"
-                    autocomplete="off" />
-             <mat-hint>Script name</mat-hint>
-             <mat-error *ngIf="scriptName && scriptName.hasError('minlength') && !scriptName.hasError('required')">
-                 Name should be minimum {{scriptName.errors.minlength.requiredLength}} characters long.
-             </mat-error>
-             <mat-error *ngIf="scriptName && scriptName.hasError('maxlength') && !scriptName.hasError('required')">
-                 Name should be maximum {{scriptName.errors.maxlength.requiredLength}} characters long.
-             </mat-error>
-             <mat-error *ngIf="scriptName && scriptName.hasError('required')">
-                 Name is <strong>required</strong>
-             </mat-error>
-         </mat-form-field>
-
-         <mat-form-field class="m-2">
-             <input matInput
-                    placeholder="Author"
-                    formControlName="author"
-                    [errorStateMatcher]="matcher"
-                    autocomplete="off" />
-             <mat-hint>Script author</mat-hint>
-             <mat-error *ngIf="scriptAuthor && scriptAuthor.hasError('maxlength')">
-                 Author name should be maximum {{scriptAuthor.errors.maxlength.requiredLength}} characters long.
-             </mat-error>
-         </mat-form-field>
-
-         <mat-form-field class="m-2 form-medium">
-             <input matInput
-                    placeholder="Document"
-                    formControlName="accordingTo"
-                    [errorStateMatcher]="matcher"
-                    autocomplete="off" />
-             <mat-hint>Accoording to</mat-hint>
-             <mat-error *ngIf="scriptDocument && scriptDocument.hasError('maxlength')">
-                 Document name should be maximum {{scriptDocument.errors.maxlength.requiredLength}} characters long.
-             </mat-error>
-         </mat-form-field>
-
-         <mat-form-field class="m-2">
-             <mat-label>Group</mat-label>
-             <mat-select formControlName="groupName"
-                         [errorStateMatcher]="matcher"
-                         required>
-                 <mat-option value="Statica"><span class="fa fa-minus"></span> Statica</mat-option>
-                 <mat-option value="Loads"><span class="fa fa-arrow-down"></span> Loads</mat-option>
-                 <mat-option value="Concrete">Concrete</mat-option>
-                 <mat-option value="Steel">Steel</mat-option>
-                 <mat-option value="Timber"><span class="fa fa-tree"></span> Timber</mat-option>
-                 <mat-option value="Soils">Soils</mat-option>
-                 <mat-divider></mat-divider>
-                 <mat-option value="Other">Other</mat-option>
-             </mat-select>
-             <mat-hint>Category for a script</mat-hint>
-         </mat-form-field>
-
-         <mat-form-field class="m-2 full-width">
-             <textarea matInput
-                       placeholder="Description"
-                       formControlName="description"
-                       required
-                       [errorStateMatcher]="matcher"
-                       autocomplete="off"></textarea>
-             <mat-hint>Description for script</mat-hint>
-             <mat-error *ngIf="scriptDescription && scriptDescription.hasError('minlength') && !scriptDescription.hasError('required')">
-                 Description should be minimum {{scriptDescription.errors.minlength.requiredLength}} characters long.
-             </mat-error>
-             <mat-error *ngIf="scriptDescription && scriptDescription.hasError('maxlength') && !scriptDescription.hasError('required')">
-                 Description should be maximum {{scriptDescription.errors.maxlength.requiredLength}} characters long.
-             </mat-error>
-             <mat-error *ngIf="scriptDescription && scriptDescription.hasError('required')">
-                 Description is <strong>required</strong>
-             </mat-error>
-         </mat-form-field>
-
-         <div class="m-2">
-             <mat-checkbox [checked]="includeNote"
-                           (change)="includeNote = !includeNote">
-                 Include note
-             </mat-checkbox>
-
-             <mat-form-field class="full-width"
-                             *ngIf="includeNote">
-                 <textarea matInput
-                           placeholder="Notes"
-                           formControlName="notes"
-                           [errorStateMatcher]="matcher"
-                           autocomplete="off"></textarea>
-                 <mat-hint>Additional notes for script</mat-hint>
-                 <mat-error *ngIf="scriptNotes && scriptNotes.hasError('maxlength')">
-                     Note should be maximum {{scriptNotes.errors.maxlength.requiredLength}} characters long.
-                 </mat-error>
-             </mat-form-field>
-         </div>
-
-
-<button *ngIf="!editMode"
-        type="submit"
-        [disabled]="!scriptForm.valid"
-        class="btn btn-primary mt-3">
-    Add Script
-</button>
-<button *ngIf="editMode"
-        type="submit"
-        [disabled]="!scriptForm.valid"
-        class="btn btn-primary mt-3">
-    Update Script
-</button>
-        </form>
-
-<app-parameters-form *ngIf="editMode"></app-parameters-form>
-    </div>
--->
